k3s/ingress/backend-private-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: icebot-backend-private
  namespace: icebot
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - host: edge-api.icebot.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: icebot-backend
                port:
                  number: 8080
